trying to reset app to its original working state

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ html
    body
 
     div.container
-      h1 #MODUSSS14 @ModusPR
+      h1 #MODUSXMAS #MODUSCRUISE @ModusPR
       hr
 
       ul.tweetHolder
