--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,7 @@ format('svg');
 
 body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
- background:#8C8E90;
+ background:#f46521;/*;#FF3F00*/
  overflow:hidden;
 }h1,h2,h2,h3,h4,h5,h5,p, span, li,a,li a {
 font-size:10px;
@@ -52,11 +52,12 @@ padding:0 1.5% 4px;
 margin: 0;
 line-height:110%;
 font-size:2.2rem;
+font-size:2.7vw;
+
 }
 .container hr {
-margin:0 1.5% 4%;
+margin:0 1.5% 1%;
 color:#fff;
-
 }
 
 h2 {
@@ -81,22 +82,23 @@ list-style:none;
 }
 ul li {
  margin-bottom:1%;
- /* background:#f74500; */
+ /*background:#f74500;/*#f74500;#d10000*/
  overflow:hidden;
  display:hidden;
  position:relative;
  -webkit-opacity: 1;
  -moz-opacity: 1;
- /* opacity: 0.85; */
- /* border-radius:4px; */
-
  /*opacity: 0.85;*/
+ border-radius:4px;
+}
+ul li:last-of-king {
+  border-bottom:none;
 }
 
-ul li.tweet>div{
+
+ul li div{
  height:13%;
  padding:1.5%;
- padding-top:0;
 }
 
 .container {
@@ -106,11 +108,10 @@ ul li.tweet>div{
  background:#F061E4;
 }
 
-.container ul hr {
-margin:2% 0 0;
+ul hr {
+
 color:#fff;
-color:#fff;
-/*adding-top:5%;*/
+padding-top:.5%;
 }
 
 
