fixed background color

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,7 @@ format('svg');
 
 body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
- background:#ECE890;/*;#FF3F00*/
+ background:#8C8E90;/*;#FF3F00*/
  overflow:hidden;
 }h1,h2,h2,h3,h4,h5,h5,p, span, li,a,li a {
 font-size:10px;
